--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div style="height: 100vh;">
-        <iframe src= width="100%" height="100%"></iframe>
+        <iframe src="https://github.com/Heikkimk/resume/blob/main/Heikki%20Kantanen%20CV%20FI%2014.1.2025.pdf" width="100%" height="100%"></iframe>
     </div>
 </body>
 </html>
