--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume - Heikki Kantanen </title>
-    <style type="text/css">
-        *{
-            border:0;
-            margin:0;
+    <title>PDF Viewer</title>
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f8f9fa;
+        }
+        iframe {
+            border: none;
+            width: 80%;
+            height: 90%;
         }
     </style>
 </head>
 <body>
-    <div style="height: 100vh;">
-        <iframe src="https://github.com/Heikkimk/resume/blob/main/Heikki%20Kantanen%20CV%20FI%2014.1.2025.pdf" width="100%" height="100%"></iframe>
-    </div>
+    <!-- Replace 'PDF_URL' with the actual URL to your PDF file on GitHub -->
+    <iframe src="https://github.com/Heikkimk/resume/blob/main/Resume.pdf" title="PDF Viewer"></iframe>
 </body>
 </html>
